package org.example.individualbackend.domain.users;

public class ClientService extends User{

}
