@startuml
class domain.users.ClientService {
}
class domain.update.UpdateUserRequest {
- Integer id
- String fName
- String lName
- String password
- String
}

class domain.create.CreateUserRequest {
- String fName
- String lName
- String
- String password
}

class domain.Match {
- Integer id
- String name
- String code
- Integer founded
- String logo
}

class domain.users.Fan {
}
class domain.Ticket {
- {static} Integer idCounter
- Integer id
- Double price
- Integer rowNum
- Integer seatNumber
}

class domain.users.Admin {
}
class domain.create.CreateUserResponse {
- Integer id
}

class domain.get.GetAllMatchesResponse {
~ List<Match> matches
}

class domain.get.GetAllMatchesRequest {
- String leagueId
- String seasonId
}

class domain.users.User {
- Integer id
- String fName
- String lName
- String
- String password
- List<Ticket> tickets
}

class domain.get.GetAllUsersResponse {
~ List<User> users
}



domain.users.User <|-- domain.users.ClientService
domain.users.User <|-- domain.users.Fan
domain.users.User <|-- domain.users.Admin
@enduml